# viewer

./: .env.example  .gitignore  demo.py  demo_eeg.py  demo_ephys_fft.py  demo_heatmap.py  demo_probe.py  demo_raster.py  demo_timeseries.py  demo_video.py  gen_zarr.ipynb  pyproject.toml  raster.py  raster_video.py  test.py  units_prepare.ipynb  viewer_ephys.py  viewer_raster.py
analysis/: gamma.ipynb
src/viewer/: __init__.py  app.py  binary_signal.py  cache.py  chunk.py  controller.py  core.py  dense_signal.py  span.py  stream.py  transforms.py  ui.py  utils.py
src/viewer/render/: __init__.py  ephys.py  event_bars.py  heatmap.py  probe.py  timeseries.py  units.py  video.py
src/viewer/stream/: __init__.py  base.py  ephys.py  timeseries.py  units.py  video.py
tests/: test_cache.py  test_controller.py  test_core.py  test_dense_signal.py  test_probe_view.py  test_stream_transforms.py  test_utils.py
