[project]
name = "viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imgui-bundle>=1.92.601",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
