[project]
name = "viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.1",
    "cmap>=0.7.2",
    "imgui-bundle>=1.92.601",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "probeinterface>=0.3.2",
    "pynapple>=0.11.0",
    "requests>=2.33.1",
    "zarr>=3.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
